学堂课程点击  医师头像跳转。。发现-详情，地址修改

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -77,7 +77,7 @@
                 {{else}}
                 <img src="{{doctorPhoto}}" alt="医师头像" onerror="nofind();" />
                 {{/if}}
-                <span class="name">我是名字</span>
+                <span class="name">{{name}}</span>
                 <div class="sign_people">
                     <span>已报名({{allEnrolledUserCount}}人)</span>
                     {{each allEnrolledUser as user i}}
