--- a/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
@@ -11,6 +11,16 @@
 
 	<!--手机嵌入模板-->
 	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
+	<style>
+		.recruit p img{
+			max-width: 6.98rem;
+			margin: 0 auto;
+		}
+		.recruit img{
+			max-width: 6.98rem;
+			margin: 0 auto;
+		}
+	</style>
 </head>
 <body>
 	<!-- 报名头部开始 -->
