--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -81,7 +81,7 @@
 					</li>
 				</ul>
 			</div>
-			<ul class="playTime playTimes z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
+			<ul class="playTime playTimes z" onclick="window.location='/xcview/html/physician/physicians_page.html?doctor={{id}}'">
 				<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;" /><span style="margin-top: 0.15rem;">{{heir}}</span></li>
 				<li style="margin-top: 0.18rem;">
 					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
