删除页面中?version=xxxxxxxxxx

--- a/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -12,11 +12,11 @@
 
 		<link rel="stylesheet" href="/web/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/web/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="/web/css/mylogin.css?version=58c2cecd8d" />
-		<link href="/web/css/header.css?version=f70aa2cb1c" rel="stylesheet" />
-		<link rel="stylesheet" href="/web/css/componet.css?version=dea190eb02" />
-		<link rel="stylesheet" href="/web/font/iconfont.css?version=342591a644">
-		<link rel="stylesheet" type="text/css" href="/web/css/liveVideo.css?v=ipandatcm_1.3&version=90f96cb97d" />
+		<link rel="stylesheet" href="/web/css/mylogin.css" />
+		<link href="/web/css/header.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/web/css/componet.css" />
+		<link rel="stylesheet" href="/web/font/iconfont.css">
+		<link rel="stylesheet" type="text/css" href="/web/css/liveVideo.css?v=ipandatcm_1.3" />
 		
 		<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
 		<style type="text/css">
@@ -100,19 +100,19 @@
 				</ul>
 			</div>
 			</div>
-			<script src="/web/js/artTemplate.js?version=dc33da0dd7" type="text/javascript" charset="utf-8"></script>
-			<script type="text/javascript" src="/web/js/bootstrap.js?version=75acc31d9f"></script>
-			<script src="/web/js/ajaxfileupload.js?version=a8c8ed6da3"></script>
+			<script src="/web/js/artTemplate.js" type="text/javascript" charset="utf-8"></script>
+			<script type="text/javascript" src="/web/js/bootstrap.js"></script>
+			<script src="/web/js/ajaxfileupload.js"></script>
 			<script src="/web/js/jquery.form.min.js"></script>
-			<script src="/web/js/html5.js?version=c7a3134a0d" type="text/javascript" charset="utf-8"></script>
-			<script src="/web/js/jquery.qrcode.js?version=28d316fcc5" type="text/javascript" charset="utf-8"></script>
-			<script src="/web/js/utf.js?version=8c4d309108" type="text/javascript" charset="utf-8"></script>
-			<script src="/web/js/ajax.js?version=625563f56c" type="text/javascript" charset="utf-8"></script>
-			<script src="/web/js/ccvideo/liveVideoAlbum.js?v=ipandatcm_1.3&version=5d53dd94c7" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/html5.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/jquery.qrcode.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/utf.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/ccvideo/liveVideoAlbum.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 			<script src="/web/js/common/video_share.js?v=ipandatcm_1.3"></script>
 	</body>
 </html>
-<script src="/web/js/placeHolder.js?version=a6f5c5dfce"></script>
+<script src="/web/js/placeHolder.js"></script>
 <script>
 	//	选集按钮点击出现专辑列表
 	var showAlbum = false;
