--- a/wechat/src/main/webapp/xcview/html/course_list.html
+++ b/wechat/src/main/webapp/xcview/html/course_list.html
@@ -14,8 +14,8 @@
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
-<!--<script src="/xcview/js/js.js?version=b35e3bdcab"></script>-->
-<link rel="stylesheet" href="/xcview/css/course_list.css?version=e888934897">
+<!--<script src="/xcview/js/js.js"></script>-->
+<link rel="stylesheet" href="/xcview/css/course_list.css">
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
@@ -135,8 +135,8 @@
 	<script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
 	
 	<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-    <script type="text/javascript" src="/xcview/js/common/common.js?version=2885ae00d7"></script>
-	<script src="/xcview/js/course_list.js?version=d5b228b68f" type="text/javascript"></script>
+    <script type="text/javascript" src="/xcview/js/common/common.js"></script>
+	<script src="/xcview/js/course_list.js" type="text/javascript"></script>
 	<!-- 公共跳转的 -->
 	<script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js"></script>
 	<!--刷新 -->
