--- a/wechat/src/main/webapp/xcview/html/course_outline.html
+++ b/wechat/src/main/webapp/xcview/html/course_outline.html
@@ -15,7 +15,7 @@
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
 <!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script><!--滑动引入js-->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
