--- a/wechat/src/main/webapp/xcview/html/index2.html
+++ b/wechat/src/main/webapp/xcview/html/index2.html
@@ -831,7 +831,7 @@ body, html {
 		src=//cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js></script>
 	<script
 		src=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.concat.min.js></script>
-	<script type="text/javascript" src="/xcview/weihoujs/biaoqing.js?v=wechat_1.1111.1&version=1a72100b6d&version=1a72100b6d&version=1a72100b6d"></script>
+	<script type="text/javascript" src="/xcview/weihoujs/biaoqing.js?v=wechat_1.1111.1"></script>
 <script src=//apps.bdimg.com/libs/underscore.js/1.7.0/underscore-min.js></script>
 </body>
 </html>
