--- a/wechat/src/main/webapp/xcview/html/lickacc_mobiles.html
+++ b/wechat/src/main/webapp/xcview/html/lickacc_mobiles.html
@@ -12,13 +12,13 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=facf12d94f"></script>
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
 <link rel="stylesheet" href="/xcview/css/mui.min.css">
-<link rel="stylesheet" href="/xcview/css/lickacc_mobile.css?version=8ee18a0929">
+<link rel="stylesheet" href="/xcview/css/lickacc_mobile.css">
 
 <script>
 	// 判断横屏展示时的状态
@@ -102,8 +102,8 @@
 <script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
 <!-- <script src="/xcviews/js/common/swiper.jquery.min-1.11.2.js" type="text/javascript" charset="utf-8"></script> -->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1&version=57bd78e86e"></script>
-<script type="text/javascript" src="/xcview/js/lickacc_mobiles.js?v=wechat_1.1.1&version=f30e932daf"></script>
+<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
+<script type="text/javascript" src="/xcview/js/lickacc_mobiles.js?v=wechat_1.1.1"></script>
 <!--处理分辨率-->
 
 
