--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/xcview/css/animate.css" />
 <link rel="stylesheet" href="/xcview/css/live_personal.css" />
 <link rel="stylesheet" href="/xcview/css/share/share.css" />
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a">
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 <script>
@@ -571,7 +571,7 @@
 <!--公用弹框 -->
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js?v=wechat_1.1.1"></script>
 <!--分享引入js-->
-<!--<script type="text/javascript" src="/xcview/js/details.js?version=c7095270c8"></script>-->
+<!--<script type="text/javascript" src="/xcview/js/details.js"></script>-->
 <!-- 导航渐变 -->
 <script>
 $(window).bind("scroll", function() {
