--- a/wechat/src/main/webapp/xcview/html/personal_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/personal_fragment.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="../css/animate.css" />
 <link rel="stylesheet" href="../css/live_personal.css" />
 <link rel="stylesheet" href="../css/share/share.css" />
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a">
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 <script>
