--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -1266,8 +1266,8 @@
 		<script src="/web/html/preview-head/preview-head.js"></script>
 		<!--头像预览需要的JS-->
 		<!--省市区三联动-->
-		<script src="/web/js/common/data.provinces2.js?version=dbc884cefd"></script>
-		<script src="/web/js/common/provinces-selector.js?version=2456a78031"></script>
+		<script src="/web/js/common/data.provinces2.js"></script>
+		<script src="/web/js/common/provinces-selector.js"></script>
 		<!--省市区三联动-->
 		
 		
