--- a/wechat/src/main/webapp/xcview/html/agreements.html
+++ b/wechat/src/main/webapp/xcview/html/agreements.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 
-<link rel="stylesheet" href="/xcview/css/cn_login.css?version=6a75a54bdc">
+<link rel="stylesheet" href="/xcview/css/cn_login.css">
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
