--- a/wechat/src/main/webapp/xcview/html/cn_login.html
+++ b/wechat/src/main/webapp/xcview/html/cn_login.html
@@ -12,8 +12,8 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 
-<link rel="stylesheet" href="/xcview/css/cn_login.css?version=6a75a54bdc">
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a">
+<link rel="stylesheet" href="/xcview/css/cn_login.css">
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
@@ -177,10 +177,10 @@
 <!-- 公共的 js  -->
 <script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-<script type="text/javascript" src="/xcview/js/common/common.js?version=1a72100b6d"></script>
-<script type="text/javascript" src="/xcview/js/common/alertPopShow.js?version=6155d0c1d4"></script>
+<script type="text/javascript" src="/xcview/js/common/common.js"></script>
+<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 
-<script type="text/javascript" src="/xcview/js/login/cn_reg.js?version=df86911168395"></script>
+<script type="text/javascript" src="/xcview/js/login/cn_reg.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
