--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -11,7 +11,7 @@
 	content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link rel="stylesheet" href="/xcview/css/css.css?version=96a0f827c11110&version=96a0f827c0&version=96a0f827c0">
+<link rel="stylesheet" href="/xcview/css/css.css">
 
 
 <!--手机嵌入模板-->
@@ -19,7 +19,7 @@
 <!-- 图片引入放大缩小 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/underscore.js"></script>
-<script type="text/javascript" src="/xcview/js/common/pinchzoom.js?version=1b3192f6cb&version=1b3192f6cb&version=1b3192f6cb"></script>
+<script type="text/javascript" src="/xcview/js/common/pinchzoom.js"></script>
 
 
 <!-- 双击图片变大缩小 -->
@@ -33,10 +33,10 @@ $(function(){
 });
 </script>
 <link rel=stylesheet href="/xcview/css/jquery.mCustomScrollbar.min.css">
-<link rel="stylesheet" href="/xcview/css/details.css?version=cdda455964&version=cdda451115964&version=cdda455964">
-<link rel="stylesheet" href="/xcview/css/style.css?version=eede15a77a&version=eede15a11177a&version=eede15a77a">
+<link rel="stylesheet" href="/xcview/css/details.css">
+<link rel="stylesheet" href="/xcview/css/style.css">
 
-<link rel="stylesheet" type="text/css" href="/xcview/css/details_style.css?version=55321119d52d7&version=55329d52d7&version=55329d52d7"/>
+<link rel="stylesheet" type="text/css" href="/xcview/css/details_style.css"/>
 
 <!--公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
@@ -504,7 +504,7 @@ $(function(){
 	</div>
 	<!--分享结束-->
 
-	<script src="/xcview/js/common/main.js?version=405566b7bf&version=405566b7bf&version=405566b7bf"></script>
+	<script src="/xcview/js/common/main.js"></script>
 	<!-- 直播分享页结束 -->
 	<!-- 点击微信-->
 	<div class="weixin_ceng">
@@ -702,17 +702,16 @@ $(function(){
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 
 <!-- <script type="text/javascript" src="/xcview/js/common/jquery-1.8.3.min.js"></script> -->
-<script src="/xcview/weihoujs/vhallSDK.js?version=8c159d711182211111111&version=8c159d7822&version=8c159d7822"></script>
+<script src="/xcview/weihoujs/vhallSDK.js"></script>
 <script src="/xcview/weihoujs/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="/xcview/weihoujs/underscore-min.js?version=963bd48ea8&version=963bd48ea8&version=963bd48ea8"></script>
-<script type="text/javascript" src="/xcview/js/common/weihoudetails.js?v=wechat_1.2.1&version=4d5a0432ee&version=4d5a0432ee&version=10d52d1975"></script>
-<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1111.1&version=1a72100b6d&version=1a72100b6d&version=1a72100b6d"></script>
-<!-- <script type="text/javascript" src="/xcview/js/XCh5Pay.js?version=70d6efdacc&version=352ea4ec3e&version=352ea4ec3e"></script> -->
-<script type="text/javascript"
-	src="/xcview/js/common/strophe.js?version=1ddc9fdf23&version=1ddc9fdf23&version=1ddc9fdf23"></script>
-<script type="text/javascript" src="/xcview/js/im/giftSend.js?version=a069a21119e1111ca&version=f3dac6e8b1&version=f30bcb705f"></script>
-<script type="text/javascript" src="/xcview/js/details_change.js?v=wechat_1.11&version=e700156cca&version=e700156cca&version=e700156cca"></script>
-<script type="text/javascript" src="/xcview/js/details.js?v=wechat_1.111&version=f236111b1111e0875&version=b47ca11167429&version=6d40e3898a"></script>
+<script src="/xcview/weihoujs/underscore-min.js"></script>
+<script type="text/javascript" src="/xcview/js/common/weihoudetails.js"></script>
+<script type="text/javascript" src="/xcview/js/common/common.js"></script>
+<!-- <script type="text/javascript" src="/xcview/js/XCh5Pay.js"></script> -->
+<script type="text/javascript" src="/xcview/js/common/strophe.js"></script>
+<script type="text/javascript" src="/xcview/js/im/giftSend.js"></script>
+<script type="text/javascript" src="/xcview/js/details_change.js"></script>
+<script type="text/javascript" src="/xcview/js/details.js"></script>
 
 
 <script type="text/javascript">
@@ -795,12 +794,6 @@ $(function(){
 			$("#doc").removeClass("img_doc");
             // $(".course_nav").addClass("hide");
 		});
-
-
-
-		
-
-		
 	};
 </script>
 
