--- a/wechat/src/main/webapp/xcview/html/person_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/person_fragment.html
@@ -11,9 +11,9 @@
 <link rel="stylesheet" href="../css/animate.css" />
 <link rel="stylesheet" href="../css/live_personal.css" />
 <link rel="stylesheet" href="../css/share/share.css" />
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a&version=31c81b486a">
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=facf12d94f"></script>
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 <style type="text/css">
 	#ccvideo table{
 		width: 100% !important;
@@ -83,7 +83,7 @@
 </div>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js?v=11111111"></script>
-<script type="text/javascript" src="/xcview/js/person_fragment.js?v=11111111111&version=4b9967a2b5"></script>
+<script type="text/javascript" src="/xcview/js/person_fragment.js?v=11111111111"></script>
 <script src="/xcview/js/common/jquery-1.8.3.min.js"></script>
 </body>
 </html>
