--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <!--公用弹框 -->
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a">
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 
 <script>
 	// 判断横屏展示时的状态
