--- a/wechat/src/main/webapp/xcview/html/physician/physician_list.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physician_list.html
@@ -257,7 +257,7 @@ window.onload = function(){
 <script src="/xcview/js/table/jquery-1.10.2.js"></script>
 <script src="/xcview/js/table/jquery.min.js"></script>
 <script type="text/javascript" src="/xcview/js/table/touchslider.js"></script>
-<script type="text/javascript" src="/xcview/js/physician/physician_list.js?v=w1a4317&version=ab65705395"></script>
+<script type="text/javascript" src="/xcview/js/physician/physician_list.js?v=w1a4317"></script>
 <!-- 公共跳转的 -->
 <script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js"></script>
 
