--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -10,27 +10,27 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 
-<!-- <link rel="stylesheet" type="text/css" href="/xcview/css/physician/index.css?v=wechat_1.1.1&version=20feeb913b"/> -->
-<link rel="stylesheet" type="text/css" href="/xcview/css/physician/physicians_page.css?v=wechat_1.1.1&version=460bed8932"/>
+<!-- <link rel="stylesheet" type="text/css" href="/xcview/css/physician/index.css?v=wechat_1.1.1"/> -->
+<link rel="stylesheet" type="text/css" href="/xcview/css/physician/physicians_page.css?v=wechat_1.1.1"/>
 <link rel="stylesheet" href="/xcview/css/physician/swiper-4.2.6.min.css" />
 <link rel="stylesheet" href="/xcview/html/physician/css/demo.css" />
 <link rel="stylesheet" href="/xcview/html/physician/css/demos.css" />
 	<!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <script src="/xcview/js/physician/zepto1.14.min.js"></script>
 <script src="/xcview/js/physician/swiper-4.2.6.min.js"></script>
 
-<script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js?version=d021c983bd"></script>
+<script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js"></script>
 
 <!-- 介绍数据引入 -->
-<script type="text/javascript" src="/xcview/js/physician/referral.js?version=6743f0205e"></script>
+<script type="text/javascript" src="/xcview/js/physician/referral.js"></script>
 
 <!-- 直播间数据引入 -->
-<script type="text/javascript" src="/xcview/js/physician/broadcastroom.js?version=d41d8cd98f"></script>
+<script type="text/javascript" src="/xcview/js/physician/broadcastroom.js"></script>
 <!--公用弹框 -->
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=f6e45d2a7e">
-<script type="text/javascript" src="/xcview/js/common/alertPopShow.js?version=3a4f24e3df"></script>
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
+<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <!--刷新 -->
 <link rel="stylesheet" href="/xcview/css/mescroll.min.css">
 <script type="text/javascript" src="/xcview/js/common/mescroll.min.js"></script>
@@ -38,9 +38,9 @@
 <link rel="stylesheet" href="/xcview/css/mui.min.css">
 
 <!-- 表情包聊天引入 -->
-<link href="/xcview/html/physician/css/webiaoqing.css?version=495638f506" rel="stylesheet" type="text/css">
-<!--<script src="/xcview/html/physician/js/jquery_min.js?version=628072e721" ></script>-->
-<script src="/xcview/html/physician/js/webiaoqin.js?version=9f3575a6d9" ></script>
+<link href="/xcview/html/physician/css/webiaoqing.css" rel="stylesheet" type="text/css">
+<!--<script src="/xcview/html/physician/js/jquery_min.js" ></script>-->
+<script src="/xcview/html/physician/js/webiaoqin.js" ></script>
 <!-- 测试点击图片 -->
 
 	<style>
@@ -1092,16 +1092,16 @@
 <script type="text/JavaScript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <!--<script src="/xcview/weihoujs/jquery.min.js"></script>-->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1&version=4a733d0dc2"></script> 
-<script type="text/javascript" src="/xcview/js/common/template.js?version=dd622e58c9"></script>    <!--数据模板引入-->
+<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
+<script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入-->
 
 <!-- 直播课跳转 -->
-<script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js?version=8bcdb81554"></script>
+<script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js"></script>
 
-<script type="text/javascript" src="/xcview/js/physician/physician_dynamics.js?version=6ee8c1a42c"></script>    <!--全部动态引入-->
+<script type="text/javascript" src="/xcview/js/physician/physician_dynamics.js"></script>    <!--全部动态引入-->
 <script type="text/javascript" src="/xcview/js/share/share.js?v=wechat_1.1.1"></script>
 <!-- 直播间数据引入 -->
-<script type="text/javascript" src="/xcview/js/physician/broadcastroom.js?version=d41d8cd98f"></script>
+<script type="text/javascript" src="/xcview/js/physician/broadcastroom.js"></script>
 
 
 
