--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -447,7 +447,7 @@
 								{{if item.type==4}}
 									<div class="save-consilia-wrap">
 										{{if item.articleStatus==true}}
-										<a href="/headline/details/{{item.articleId}}" style="width: 100%;">
+										<a href="/headline/details/{{item.articleId}}" style="width: 100%;" target="_blank">
 										{{else}}
 										<a href="javascript:;" onclick="lowerText()" style="width: 100%;">
 										{{/if}}
@@ -465,7 +465,7 @@
 								{{if item.type==5}}
 								<div class="save-class-wrap">
 									{{if item.courseStatus==true}}
-									<a href="/courses/{{item.courseId}}/info" style="width: 100%;">
+									<a href="/courses/{{item.courseId}}/info" style="width: 100%;" target="_blank">
 									{{else}}
 									<a href="javascript:;" onclick="lowerFrame()" style="width: 100%;">
 									{{/if}}
