发现--师承返回上一级

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -231,8 +231,7 @@
                         }
                         /*跳转链接*/
                         if(isNotBlank(back) && back.indexOf("physicians_page.html") != -1){
-                            window.location.href = "/xcview/html/physician/physicians_page.html?doctor=" + id;
-                            return;
+                            back
                         }
                         location.href = '/xcview/html/apprentice/apprentice.html'
                     }
