医师处理视频

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -231,7 +231,7 @@
                         }
                         /*跳转链接*/
                         if(isNotBlank(back) && back.indexOf("physicians_page.html") != -1){
-                            back
+                            window.history.go(-1);
                         }
                         location.href = '/xcview/html/apprentice/apprentice.html'
                     }
