--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -26,8 +26,6 @@
 <!-- 介绍数据引入 -->
 <script type="text/javascript" src="/xcview/js/physician/referral.js"></script>
 
-<!-- 直播间数据引入 -->
-<script type="text/javascript" src="/xcview/js/physician/broadcastroom.js"></script>
 <!--公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
@@ -128,6 +126,18 @@
 		.am-pureview{
 			z-index: 999999;
 		}
+		.ccH5FullsBtn{
+			display: none !important;
+		}
+		.ccH5playerBox video{
+			z-index: 1;
+		}
+		.the_dynamic{
+			    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background: red;
+		}
 
 		/*处理刷新*/
 		.minirefresh-wrap{
@@ -145,7 +155,13 @@
 			max-height: 1rem;
 			line-height: 1rem;
 			padding: 0;
-			margin-top: -1rem;
+			margin-top: -0.5rem;
+		}
+		.minirefresh-scroll{
+			background: none;
+		}
+		.downwrap-content{
+			display: none;
 		}
 	</style>
 
@@ -511,10 +527,10 @@
 					<div class="both"></div>
 				</div>
 				<div class="ccvideo_div">
-					<div id="ccvideo{{item.id}}" class="comment_hide ccvideo">
+					<div id="ccvideo{{item.id}}" data-id="{{item.id}}"class="comment_hide ccvideo">
 						
 					</div>
-					<img src="{{item.coverImg}}" class="ccvideo_img" />
+					<img src="{{item.coverImg}}" class="ccvideo_img ccvideo{{item.id}}" />
 				<div>
 				
 				{{else if item.typeId != null && item.typeId != 8}}
@@ -531,7 +547,7 @@
 						<div class="article_nav_cen_size">{{item.articleTitle}}</div>
 						<div class="article_nav_cen_sizes">{{item.articleContent}}</div>
 						{{if item.articleStatus == 0}}
-						<div style="background: #FAFAFA;font-size: 0.26rem;">抱歉，此文章已被作者删除。</div>
+						<div style="font-size: 0.26rem;width: 100%;height: 1rem;margin-top: 1.5rem;">抱歉，此文章已被作者删除。</div>
 						{{/if}}
 					</div>
 					<div class="both"></div>
@@ -1112,7 +1128,7 @@
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/JavaScript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<!--<script src="/xcview/weihoujs/jquery.min.js"></script>-->
+<script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入-->
