打开轮播引入文件

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <script src="/xcview/js/physician/zepto1.14.min.js"></script>
-<!-- <script src="/xcview/js/physician/swiper-4.2.6.min.js"></script> -->
+<script src="/xcview/js/physician/swiper-4.2.6.min.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js"></script>
 
