医案专栏文字修改

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1023,7 +1023,7 @@
 										</td>
 											{{else}}
 										<td>
-											已撤下
+											已下架
 										</td>
 											{{/if}}
 										<td>
@@ -1032,7 +1032,7 @@
 										{{if item.status==1}}
 										<td>
 											<a href="javascript:;" onclick="showPreview({{i}})">预览</a>
-											<a href="javascript:;" class="fluctuate" data-id="{{item.id}}" data-status="0">下线</a>
+											<a href="javascript:;" class="fluctuate" data-id="{{item.id}}" data-status="0">撤下</a>
 											<a href="javascript:;" onclick="columnEdit({{i}})">编辑</a>
 										</td>
 										{{else}}
