--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -133,15 +133,18 @@
 			z-index: 1;
 		}
 		.the_dynamic{
-			    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    background: red;
+			overflow: hidden;
+		    width: 100%;
+		    height: 100%;
+		    /*background: red;*/
+		    position: fixed;
+		    top: 5.4rem;
+		    /*top: 5.7rem;*/
 		}
 
 		/*处理刷新*/
 		.minirefresh-wrap{
-			top: 5.3rem;
+			/*top: 5.3rem;*/
 		}
 		.minirefresh-theme-default .minirefresh-downwrap{
 			height: 1rem;
@@ -467,6 +470,12 @@
 		<!-- 其他一 -->
 		<div id="minirefresh" class="minirefresh-wrap">
 			<div class="minirefresh-scroll">
+
+
+			
+
+
+
 		<div class="rests_nav">
 
 			<script type="text/html" id="wrap_doctor_dynamics">
@@ -1522,6 +1531,12 @@ function header_click(){
 
     var minirefresh=$(window).height()-$(".top_show_height").height();
     $("#minirefresh").height(minirefresh);
+
+    // 全部动态最外层
+
+    var minirefreshs=$(window).height()-$(".top_show_height").height();
+    $(".the_dynamic").height(minirefreshs);
+
 </script>
 <script type="text/javascript" src="/xcview/html/physician/js/amazeui.js?version=5bdfd7fbfe"></script>
 
