[bug fix]fix 报道来源太长自动换行

--- a/wechat/src/main/webapp/xcview/html/article_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/article_fragment.html
@@ -87,7 +87,7 @@
 <div id="wp">
     <div class="wrap_vedio" id="jieshao">
         <div class="user_mywrite" id="aaaaa"></div>
-        <div class="consilia_center_url" style="color: #999999;display: none;margin-top: 10px"></div>
+        <div class="consilia_center_url" style="color: #999999;display: none;margin-top: 10px;word-break:break-all;"></div>
     </div>
 </div>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
