--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -121,7 +121,7 @@
 		}
 
 		.am-pureview-bar-active .am-pureview-actions, .am-pureview-bar-active .am-pureview-bar{
-			/*opacity: 0;*/
+			opacity: 0;
 		}
 		.am-pureview{
 			z-index: 999999;
@@ -137,10 +137,22 @@
 		    width: 100%;
 		    height: 100%;
 		    /*background: red;*/
-		    position: fixed;
-		    top: 5.4rem;
+		    /* position: fixed;
+		    top: 5.4rem; */
 		    /*top: 5.7rem;*/
 		}
+
+		.rests_nav{
+			/* position: fixed;
+					    top: 5.4rem; */
+		}
+
+		.minirefresh-wrap{
+			position: static !important;
+		}
+
+
+
 
 		/*处理刷新*/
 		.minirefresh-wrap{
@@ -158,7 +170,7 @@
 			max-height: 1rem;
 			line-height: 1rem;
 			padding: 0;
-			margin-top: -0.5rem;
+			/*margin-top: -0.5rem;*/
 		}
 		.minirefresh-scroll{
 			background: none;
@@ -356,7 +368,16 @@
 		
 		
 
-		<!-- 轮播开始 -->
+		
+
+
+	<!-- 中间内容开始 -->
+	<div class="the_dynamic">
+		<!-- 其他一 -->
+		<div id="minirefresh" class="minirefresh-wrap">
+			<div class="minirefresh-scroll">
+
+<!-- 轮播开始 -->
 		<!--顶部轮播-->
 		<div class="top_details">
 			<script type="text/html" id="top_details">
@@ -448,9 +469,6 @@
 		</div>
 		<!-- 选项卡结束 -->
 
-		
-	</div>
-	<!-- 点击全部动态=显示筛看开始 -->
 		<div class="screen_show">
 			<div class="screen_show_bg"></div>
 			<div class="screen_show_main">
@@ -465,13 +483,6 @@
 			</div>
 		</div>
 		<!-- 点击全部动态=显示筛看结束 -->
-	<!-- 中间内容开始 -->
-	<div class="the_dynamic">
-		<!-- 其他一 -->
-		<div id="minirefresh" class="minirefresh-wrap">
-			<div class="minirefresh-scroll">
-
-
 			
 
 
@@ -535,7 +546,8 @@
 						
 					</div>
 					<img src="{{item.coverImg}}" class="ccvideo_img ccvideo{{item.id}}" />
-				<div>
+					<div class="both"></div>
+				</div>
 				
 				{{else if item.typeId != null && item.typeId != 8}}
 				<!-- 文章-->
@@ -677,38 +689,11 @@
 			</script>
 		</div>
 
-			</div>
-		</div>
 
 
-
-
-
-
-		<!-- 删除样式开始 -->
-			<!-- <div class="remove">
-				<div class="remove_bg"></div>
-				<div class=""></div>
-			</div> -->
-		<!-- 删除样式结束 -->
-		
-	</div>
-	<!-- 中间内容结束 -->
-
-	<!-- 点击回复出现删除复制开始 -->
-	<div class="remove_copy">
-		<div class="remove_copy_bg"></div>
-		<div class="remove_copy_main" style="height: 1rem;">
-			<!-- <div class="copy" >复制</div> -->
-			<div class="remove">删除</div>
-		</div>
-	</div>
-	<!-- 点击回复出现删除复制结束 -->
-
-	<!-- 直播间开始 -->
+		<!-- 直播间开始 -->
 	<div class="broadcastroom">
 		<div class="broadcastroom_video">
-			
 			<!-- 直播中提示 -->
 			<div class="living_broadcastroom" id="living_broadcastroom">
 				<script type="text/html" id="living_broadcastroom_id">			
@@ -1098,6 +1083,42 @@
 	</div>
 	<!-- 介绍结束 -->
 
+
+
+		
+	</div>
+	<!-- 点击全部动态=显示筛看开始 -->
+		
+			</div>
+		</div>
+
+
+
+
+
+
+		<!-- 删除样式开始 -->
+			<!-- <div class="remove">
+				<div class="remove_bg"></div>
+				<div class=""></div>
+			</div> -->
+		<!-- 删除样式结束 -->
+		
+	</div>
+	<!-- 中间内容结束 -->
+
+	<!-- 点击回复出现删除复制开始 -->
+	<div class="remove_copy">
+		<div class="remove_copy_bg"></div>
+		<div class="remove_copy_main" style="height: 1rem;">
+			<!-- <div class="copy" >复制</div> -->
+			<div class="remove">删除</div>
+		</div>
+	</div>
+	<!-- 点击回复出现删除复制结束 -->
+
+	
+
 	
 
 	<!-- 表情包开始 -->
@@ -1150,13 +1171,13 @@
 <!-- 导航渐变 -->
 <script>
 $(window).bind("scroll", function() {
-    var $header = $("#header");
+    /*var $header = $("#header");
     var t = 200,
         m = Math.min(document.documentElement.scrollTop || document.body.scrollTop, t) / t;
-    $header.css("background", "rgba(255, 255, 255, " + m + ")");
+    $header.css("background", "rgba(255, 255, 255, " + m + ")");*/
 
     // 判断滚动条显示隐藏title
-	var top = $(document).scrollTop();
+	/*var top = $(".the_dynamic").scrollTop();
     if(top < 100){
     	$(".header p").hide();
     	$(".arror_return img").attr("src","/xcview/images/anchorj.png");
@@ -1167,19 +1188,17 @@ $(window).bind("scroll", function() {
     	$(".header_news img").attr("src","/xcview/images/share_img.png");
     	$(".header p").show();
     	$("#header").css("border-bottom","1px solid #d8dde6");
-    }
+    }*/
 });
 </script>
 <!-- 头部固定开始 -->
 <script>
- $(document).ready(function() {
+/* $(document).ready(function() {
      var $window = $(window),
          $mainMenuBar = $('#mainMenuBar'),
          $mainMenuBarAnchor = $('#mainMenuBarAnchor');
      $window.scroll(function() {
-         //scrollTop()方法返回或设置匹配元素的滚动条的垂直位置
          var window_top = $window.scrollTop();
-         //javascript用offsetTop();jquery用offset().top;
          var div_top = $mainMenuBarAnchor.offset().top;
          if (window_top > div_top) {
              $mainMenuBar.addClass('stick');
@@ -1189,7 +1208,7 @@ $(window).bind("scroll", function() {
              $mainMenuBarAnchor.height(0);
          }
      });
- });
+ });*/
 </script>
 <!-- 头部固定结束 -->
 
@@ -1210,7 +1229,7 @@ $(window).bind("scroll", function() {
 			$(".dynamic_opacity").removeClass("hide");  /*移除点击全部动态筛选*/
 			$("body").removeClass("body");
 			$(".broadcastroom").hide();  //直播间隐藏
-			$(".the_dynamic").show();   //全部动态隐藏
+			$(".rests_nav").show();   //全部动态隐藏
 			$(".message_referral").hide();   //介绍结束
 		});
 		$(".li_data").click();
@@ -1230,7 +1249,7 @@ $(window).bind("scroll", function() {
 			$(".dynamic_opacity").addClass("hide");
 			$(".screen_show").hide();  /*隐藏筛选*/
 			$("body").removeClass("body");
-			$(".the_dynamic").hide();  /*全部动态隐藏*/
+			$(".rests_nav").hide();  /*全部动态隐藏*/
 			$(".broadcastroom").show();   /*直播间打开*/
 			$(".message_referral").hide();  //介绍结束
 			// $(".broadcastroom").show();
@@ -1252,7 +1271,7 @@ $(window).bind("scroll", function() {
 			$(".screen_show").hide();  /*隐藏筛选*/
 			$("body").removeClass("body");
 			$(".broadcastroom").hide();  //直播间隐藏
-			$(".the_dynamic").hide();   //全部动态隐藏
+			$(".rests_nav").hide();   //全部动态隐藏
 			$(".message_referral").show();  //介绍结束
 			
 		});
@@ -1529,13 +1548,15 @@ function header_click(){
     $(".baseImagenumbers").height(baseImagenumbers);
     // };
 
-    var minirefresh=$(window).height()-$(".top_show_height").height();
-    $("#minirefresh").height(minirefresh);
+    /*var minirefresh=$(window).height()-$(".top_show_height").height();
+    $("#minirefresh").height(minirefresh);*/
 
     // 全部动态最外层
+    /*var minirefreshs=$(window).height()-$(".top_show_height").height();
+    $(".the_dynamic").height(minirefreshs);*/
 
-    var minirefreshs=$(window).height()-$(".top_show_height").height();
-    $(".the_dynamic").height(minirefreshs);
+    /*var minirefresh=$(window).height()-$(".top_show_height").height();
+    $(".rests_nav").height(minirefresh);*/
 
 </script>
 <script type="text/javascript" src="/xcview/html/physician/js/amazeui.js?version=5bdfd7fbfe"></script>
