--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -289,6 +289,7 @@
 	    margin: 0.2rem 0;
 	    background: #fff;
 	    margin-bottom: 0;
+	    padding-bottom: 0;
 	}
 	.paper_nav_span{
 		height: 100%;
@@ -562,10 +563,10 @@
 						<img src="{{item.articleImgPath}}" alt="" />
 						<div class="article_nav_cen_size">{{item.articleTitle}}</div>
 						<div class="article_nav_cen_sizes">{{item.articleContent}}</div>
-						{{if item.articleStatus == 0}}
-						<div style="font-size: 0.26rem;width: 100%;height: 1rem;margin-top: 1.5rem;">抱歉，此文章已被作者删除。</div>
-						{{/if}}
 					</div>
+					{{if item.articleStatus == 0}}
+						<div style="font-size: 0.26rem;width: 6.98rem;height: 0.57rem;line-height: 0.57rem;background: #f0f0f0;margin: 0 auto;background: #FAFAFA;border: 1px solid #F0F0F0;border-radius: 4px;text-indent: 0.1rem;">抱歉，此文章已被作者删除。</div>
+					{{/if}}
 					<div class="both"></div>
 				</div>
 				{{else if item.type == 5}}
