课程跳转--课程加分钟

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -182,7 +182,7 @@
 							<p>{{item.gradeName}}</p>
 							<p class="limit_time">
 								<img src="../images/Sinatv_time.png"/>
-								<span>{{item.courseLength}}</span>
+								<span>{{item.courseLength}}分钟</span>
 							</p>
 						</div>
 					</li>
